pthon works me happy pyodide

--- a/FirstProject/package.json
+++ b/FirstProject/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@pyscript/core": "^0.6.18",
+    "brython": "^3.13.0",
+    "pyodide": "^0.26.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
